# lingmo-filemanager

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  com.lingmo.FileManager.xml  desktopiconprovider.cpp  desktopiconprovider.h  lingmo-filemanager.desktop  main.cpp  qml.qrc  window.cpp  window.h
.github/workflows/: PushToCI.yml  build.yml  release.yml
cio/: cfilesizejob.cpp  cfilesizejob.h
cmake/: FindLibmpv.cmake
debian/: changelog  control
desktop/: desktop.cpp  desktop.h  desktopsettings.cpp  desktopsettings.h  desktopview.cpp  desktopview.h  dockdbusinterface.cpp  dockdbusinterface.h
dialogs/: createfolderdialog.cpp  createfolderdialog.h  filepropertiesdialog.cpp  filepropertiesdialog.h  openwithdialog.cpp  openwithdialog.h
dragdrop/draganddrop/: declarativemimedata.cpp
filemanager/helper/: datehelper.cpp
filemanager/model/: dirlister.cpp  dirlister.h  foldermodel.cpp  foldermodel.h
helper/: filelauncher.cpp  filelauncher.h  fm.cpp  fm.h  keyboardsearchmanager.cpp  keyboardsearchmanager.h  pathhistory.cpp  pathhistory.h  shortcut.cpp  shortcut.h
mimetype/: mimeappmanager.cpp  mimeappmanager.h  xdgdesktopfile.cpp  xdgdesktopfile.h
model/: dirlister.cpp  dirlister.h  foldermodel.cpp  foldermodel.h  pathbarmodel.cpp  pathbarmodel.h  placesitem.cpp  placesitem.h  placesmodel.cpp  placesmodel.h
qml/: FolderGridItem.qml  FolderGridView.qml  FolderListItem.qml  FolderListView.qml  FolderPage.qml  GlobalSettings.qml  OptionsMenu.qml  PathBar.qml  SideBar.qml  main.qml
qml/Controls/: IconButton.qml
qml/Desktop/: Main.qml  Wallpaper.qml
qml/Dialogs/: CreateFolderDialog.qml  DeleteDialog.qml  EmptyTrashDialog.qml  OpenWithDialog.qml  PropertiesDialog.qml
runtime/: runtime.cpp
thumbnailer/: thumbnailcache.cpp  thumbnailcache.h  thumbnailprovider.cpp  thumbnailprovider.h
translations/: ar_AA.ts  az.ts  be_BY.ts  be_Latn.ts  bg_BG.ts  bs_BA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_US.ts  eo_XX.ts  es_ES.ts  es_MX.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  ie.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  lt_LT.ts  lv_LV.ts  mg.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sk_SK.ts  so.ts  sr_RS.ts  sv_SE.ts  (+9 more)
widgets/: rubberband.cpp  rubberband.h
